fix(viwer): slightly enlarged the max-width of the lists (non-index ones) on the semidip version to prevent unwanted breaks due to sentence wrapping.

--- a/frontend/assets/css/text-viewer2.scss
+++ b/frontend/assets/css/text-viewer2.scss
@@ -1292,6 +1292,13 @@ $render-sic: false;
   }
 
   &.view-semidip {
+
+    // GN: fix to avoid sentence wrapping around too narrow items
+    // E.g. 3.190, 2.80. See Click up
+    .tei-list:not(.tei-type-index) {
+      max-width: 90%;
+    }
+
     // .tei-list[data-tei-rend="braced(})"] + .tei-label {
     span[data-tei-rend="braced(})"] + .tei-label,
     .has-braced-seg > .tei-label {
